force-app/main/default/objects/Animal_Shelter_Settings__c/Animal_Shelter_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>[Animal Shelter] Global settings for the Animal Shelter Starter Pack</description>
    <label>Animal Shelter Settings</label>
</CustomObject>