force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Allow_Images__c.field-meta.xml
<CustomField>
    <fullName>Allow_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Images from ChipNDoodle</description>
    <label>Allow Images</label>
    <type>Checkbox</type>
</CustomField>