force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Breeds_Migration_Complete__c.field-meta.xml
<CustomField>
    <fullName>Breeds_Migration_Complete__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that the migration to the Breeds object has been completed.</description>
    <label>Breeds Migration Complete</label>
    <type>Checkbox</type>
</CustomField>