force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Default_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Animal_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Animal Shelter] Set this option if you want create a Animal Name automatically based on the Record Name.</description>
    <inlineHelpText>Set this option if you want create a Animal Name automatically based on the Record Name.</inlineHelpText>
    <label>Default Animal Name</label>
    <type>Checkbox</type>
</CustomField>