force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Default_Animal_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Default_Animal_Name_Prefix__c</fullName>
    <description>[Animal Shelter] Set a prefix for the Animal Name if using the default animal name creation, i.e. Site name</description>
    <inlineHelpText>Set a prefix for the Animal Name if using the default animal name creation, i.e. Site name</inlineHelpText>
    <label>Default Animal Name Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>