force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Default_Shelter_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Shelter_Name__c</fullName>
    <description>The default shelter name that is associated with an Account record</description>
    <label>Default Shelter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>