force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Disable_Behaviour_Update__c.field-meta.xml
<CustomField>
    <fullName>Disable_Behaviour_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Animal Shelter] By default when animal behaviours are updated on an assessment record the animal record is updated to reflect the new statuses.  Checking this setting disables the default behaviour</description>
    <label>Disable Behaviour Update</label>
    <type>Checkbox</type>
</CustomField>