force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Enable_Animal_Action_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Enable_Animal_Action_Tasks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled Tasks are created for each Animal Action record. Default enabled</description>
    <label>Enable Animal Action Tasks</label>
    <type>Checkbox</type>
</CustomField>