force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Enable_Auto_Match__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Match__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables the Adoption auto match functions</description>
    <label>Enable Auto Match</label>
    <type>Checkbox</type>
</CustomField>