force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Enable_Movement_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Enable_Movement_Tasks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked tasks are created for each Movement record created. Default is enabled</description>
    <label>Enable Movement Tasks</label>
    <type>Checkbox</type>
</CustomField>