force-app/main/default/objects/Animal_Shelter_Settings__c/fields/microchip_api_Token__c.field-meta.xml
<CustomField>
    <fullName>microchip_api_Token__c</fullName>
    <label>Microchip API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>