force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Movement_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Movement_Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, the trigger on the Movement object is enabled.</inlineHelpText>
    <label>Movement Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>