force-app/main/default/objects/Animal_Shelter_Settings__c/fields/Task_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Queue_Name__c</fullName>
    <description>[Animal Shelter] Used by flows to assign Tasks to a Queue rather than record Owner, if populated.</description>
    <inlineHelpText>Please use the Tasks API/Developer Name</inlineHelpText>
    <label>Task Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>