force-app/main/default/objects/Animal_Shelter_Settings__c/fields/What3Words_API_Key__c.field-meta.xml
<CustomField>
    <fullName>What3Words_API_Key__c</fullName>
    <description>[Animal Shelter] API Key for What3Word integration</description>
    <inlineHelpText>API Key for What3Word integration</inlineHelpText>
    <label>What3Words API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>